# oop_taiguzhinov

./: README.md
Desktop/lab1/: CMakeLists.txt
Desktop/lab1/headers/: function.h
Desktop/lab1/src/: function.cpp  main.cpp
Desktop/lab1/tests/: CMakeLists.txt  test_function.cpp
